k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: murandi-ingress
  namespace: murandi-apartments
spec:
  rules:
    - host: murandi-apartments.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: murandi-frontend
                port:
                  number: 80
          - path: /murandi/v1
            pathType: Prefix
            backend:
              service:
                name: murandi-backend
                port:
                  number: 5700
